--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -113,6 +113,8 @@
     <ClCompile Include="Source\NPC\PowerUpCave.cpp" />
     <ClCompile Include="ATKUpCave.cpp" />
     <ClCompile Include="PowerUpCave.cpp" />
+    <ClCompile Include="Source\NPC\ATKUpCave.cpp" />
+    <ClCompile Include="Source\NPC\PowerUpCave.cpp" />
     <ClCompile Include="Source\NPC\DealDaemon.cpp" />
     <ClCompile Include="Source\NPC\NPCManager.cpp" />
     <ClCompile Include="Source\NPC\NPC.cpp" />
@@ -186,7 +188,7 @@
     <ClCompile Include="TransactionNode.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ATKUpCave.h" />
+    <ClInclude Include="Include\NPC\ATKUpCave.h" />
     <ClInclude Include="Include\NPC\DealDaemon.h" />
     <ClInclude Include="Include\Player\PlayerAttackSpider.h" />
     <ClInclude Include="Include\NPC\DealDaemon.h" />
@@ -240,7 +242,7 @@
     <ClInclude Include="ShopNode.h" />
     <ClInclude Include="Include\NPC\NPC.h" />
     <ClInclude Include="Include\NPC\NPCManager.h" />
-    <ClInclude Include="PowerUpCave.h" />
+    <ClInclude Include="Include\NPC\PowerUpCave.h" />
     <ClInclude Include="ThirdParty\imgui\imconfig.h" />
     <ClInclude Include="ThirdParty\imgui\imgui.h" />
     <ClInclude Include="ThirdParty\imgui\imgui_impl_dx11.h" />
