--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="Include\Enemy\WalkEnemy.h" />
     <ClInclude Include="Include\Util\Util.h" />
     <ClInclude Include="Include\Scene\TitleScene.h" />
+    <ClInclude Include="ThirdParty\magic_enum.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
