--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -359,6 +359,9 @@
     <ClInclude Include="Include\NPC\ATKUpCave.h">
       <Filter>ヘッダー ファイル\PowerUp</Filter>
     </ClInclude>
+    <ClInclude Include="ThirdParty\magic_enum.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
     <ClInclude Include="Include\Util\Player\PlayerLeg.h">
       <Filter>ヘッダー ファイル\player</Filter>
     </ClInclude>
