--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -256,6 +256,7 @@
     <ClInclude Include="Include\Scene\TitleScene.h" />
     <ClInclude Include="ThirdParty\magic_enum.hpp" />
     <ClInclude Include="TransactionNode.h" />
+    <ClInclude Include="ThirdParty\magic_enum.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
