--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -118,7 +118,11 @@
     <ClCompile Include="Source\Scene\GameOverScene.cpp" />
     <ClCompile Include="Source\Base\BaseEnemy.cpp" />
     <ClCompile Include="BaseNode.cpp" />
+    <ClCompile Include="BattleNode.cpp" />
+    <ClCompile Include="HealingNode.cpp" />
     <ClCompile Include="NodeManager.cpp" />
+    <ClCompile Include="ReinforcementNode.cpp" />
+    <ClCompile Include="ShopNode.cpp" />
     <ClCompile Include="Source\Util\MapChip.cpp" />
     <ClCompile Include="Source\Enemy\EnemyManager.cpp" />
     <ClCompile Include="Source\Enemy\FlyEnemy.cpp" />
@@ -163,12 +167,13 @@
     <ClCompile Include="Source\Enemy\WalkEnemy.cpp" />
     <ClCompile Include="Source\Util\Util.cpp" />
     <ClCompile Include="Source\Scene\TitleScene.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Include\NPC\DealDaemon.h" />
     <ClInclude Include="Include\Player\PlayerAttackSpider.h" />
     <ClInclude Include="Include\Scene\ClearScene.h" />
     <ClInclude Include="Include\Scene\GameOverScene.h" />
+    <ClCompile Include="TransactionNode.cpp" />
+    <ClInclude Include="BattleNode.h" />
+    <ClInclude Include="HealingNode.h" />
     <ClInclude Include="Include\BaseNode.h" />
     <ClInclude Include="Include\Util\ChipIndex.h" />
     <ClInclude Include="Include\Enemy\EnemyManager.h" />
@@ -211,6 +216,8 @@
     <ClInclude Include="Include\Player\PlayerLeg.h" />
     <ClInclude Include="Include\Player\PlayerLegNormal.h" />
     <ClInclude Include="Include\NodeManager.h" />
+    <ClInclude Include="ReinforcementNode.h" />
+    <ClInclude Include="ShopNode.h" />
     <ClInclude Include="ThirdParty\imgui\imconfig.h" />
     <ClInclude Include="ThirdParty\imgui\imgui.h" />
     <ClInclude Include="ThirdParty\imgui\imgui_impl_dx11.h" />
@@ -223,6 +230,7 @@
     <ClInclude Include="Include\Util\Util.h" />
     <ClInclude Include="Include\Scene\TitleScene.h" />
     <ClInclude Include="ThirdParty\magic_enum.hpp" />
+    <ClInclude Include="TransactionNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
