--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -52,6 +52,12 @@
     <Filter Include="ヘッダー ファイル\PowerUp">
       <UniqueIdentifier>{88bedcf7-a7eb-409d-9ec6-912d77eb3120}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Node">
+      <UniqueIdentifier>{fa511455-1997-47b5-b2a4-9faa8fec00f6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Node">
+      <UniqueIdentifier>{744e79e3-b9aa-4477-948b-7d04ac14bb49}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\main.cpp">
@@ -156,28 +162,34 @@
     <ClCompile Include="Source\Enemy\EnemyManager.cpp">
       <Filter>ソース ファイル\Enemy</Filter>
     </ClCompile>
-    <ClCompile Include="BaseNode.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="NodeManager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Enemy\BaseEnemy.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="ReinforcementNode.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="Source\Enemy\BaseEnemy.cpp">
+      <Filter>ソース ファイル\Enemy</Filter>
     </ClCompile>
-    <ClCompile Include="TransactionNode.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="Source\Node\BattleNode.cpp">
+      <Filter>ソース ファイル\Node</Filter>
     </ClCompile>
-    <ClCompile Include="BattleNode.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="Source\Node\HealingNode.cpp">
+      <Filter>ソース ファイル\Node</Filter>
     </ClCompile>
-    <ClCompile Include="ShopNode.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="Source\Node\NodeManager.cpp">
+      <Filter>ソース ファイル\Node</Filter>
     </ClCompile>
-    <ClCompile Include="HealingNode.cpp">
+    <ClCompile Include="Source\Node\ReinforcementNode.cpp">
+      <Filter>ソース ファイル\Node</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Node\ShopNode.cpp">
+      <Filter>ソース ファイル\Node</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Node\TransactionNode.cpp">
+      <Filter>ソース ファイル\Node</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Node\BaseNode.cpp">
+      <Filter>ソース ファイル\Node</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Node\StartNode.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -290,25 +302,31 @@
     <ClInclude Include="Include\Enemy\EnemyManager.h">
       <Filter>ヘッダー ファイル\Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="Include\BaseNode.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Include\Node\BaseNode.h">
+      <Filter>ヘッダー ファイル\Node</Filter>
     </ClInclude>
-    <ClInclude Include="Include\NodeManager.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Include\Node\BattleNode.h">
+      <Filter>ヘッダー ファイル\Node</Filter>
     </ClInclude>
-    <ClInclude Include="ReinforcementNode.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Include\Node\HealingNode.h">
+      <Filter>ヘッダー ファイル\Node</Filter>
     </ClInclude>
-    <ClInclude Include="TransactionNode.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Include\Node\NodeManager.h">
+      <Filter>ヘッダー ファイル\Node</Filter>
     </ClInclude>
-    <ClInclude Include="BattleNode.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Include\Node\NodeType.h">
+      <Filter>ヘッダー ファイル\Node</Filter>
     </ClInclude>
-    <ClInclude Include="ShopNode.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Include\Node\ReinforcementNode.h">
+      <Filter>ヘッダー ファイル\Node</Filter>
     </ClInclude>
-    <ClInclude Include="HealingNode.h">
+    <ClInclude Include="Include\Node\ShopNode.h">
+      <Filter>ヘッダー ファイル\Node</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Node\TransactionNode.h">
+      <Filter>ヘッダー ファイル\Node</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Node\StartNode.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
