--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -201,7 +201,7 @@
     <ClCompile Include="Source\Player\PlayerLegNormal.cpp">
       <Filter>ソース ファイル\player</Filter>
     </ClCompile>
-    <ClCompile Include="ItemShop.cpp">
+    <ClCompile Include="Source\Deal\ItemShop.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -253,9 +253,6 @@
     </ClInclude>
     <ClInclude Include="GameCore\Input.h">
       <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="Include\Player\Player.h">
-      <Filter>ヘッダー ファイル\player</Filter>
     </ClInclude>
     <ClInclude Include="Include\Player\PlayerAttack.h">
       <Filter>ヘッダー ファイル\player</Filter>
@@ -368,8 +365,11 @@
     <ClInclude Include="PowerUpCave.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="ItemShop.h">
+    <ClInclude Include="Include\Deal\ItemShop.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Player\Player.h">
+      <Filter>ヘッダー ファイル\player</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
